feat: Virtual Threads, reply chain stripping, RAG pipeline improvements
- SynologyPstFinderService: parhuzamos kiterjesztes-kereses Virtual Threads-szel;
  RuntimeException ujradobas ExecutionException-bol a tesztek kompatibilitasahoz
- PstFinderService: konyvtarbejuras atallitva Virtual Threads-re
- TextExtractionService: reply chain levagas (RFC 3676, Outlook-mintak,
  magyar Van:/Felado: fejlecek); 6 uj unit teszt
- DocumentChunkRepository: existsByAttachmentPathAndChunkIndex metodus
- RagIngestionService: csatolmany chunk-deduplikacio path alapjan; Ollama
  embedding executor Virtual Threads-re atallitva
- QueryRewriteService: extractFilters() - felado es datumtartomany kinyerese
  termeszetes nyelvu keresesi lekerdezesbol LLM-mel
- RagChatService: extractFilters hivas chat() es chatStream() elott
- README: uj funkciok dokumentalva